ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  namespace: default
  # annotations:
  # kubernetes.io/ingress.class: ingress-nginx
  # nginx.ingress.kubernetes.io/rewrite-target: /
  ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /mongo-dashboard
            # pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 80
          - path: /nginx
            # pathType: Prefix
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
